@@ -1,5 +1,12 @@
 2006-01-01 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp
+	(openvrml::browser::create_vrml_from_stream(std::istream &)):
+	Provide a real URI associated with the vrmlstream.  This is needed
+	so that PROTOs in the stream can have valid node_class_ids.
+
+2006-01-01 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/Makefile.am: touch files generated by antlr;
 	antlr doesn't update the timestamps correctly.
 
